# Project-Chroma-Note

./: .gitignore  CMakeLists.txt  Project_Chromatic_Aberation.jucer
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: DenkabeDelay.h  DownSampler.h  Looper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Saturator.h  Shifter.h  Stutter.h  Voice.h
Source/McPherson/: McPhersonPitchShifter.cpp  McPhersonPitchShifter.h
Source/WubVocoder/: istft.cpp  istft.h  stft.cpp  stft.h
